crates/lang/macro/tests/ui/selector_bytes/fail/invalid_parameter_type_01.stderr
error: expected string or byte string literal as input. found Bool(LitBool { value: true })
 --> $DIR/invalid_parameter_type_01.rs:3:37
  |
3 | const _: u32 = ink::selector_bytes!(true);
  |                                     ^^^^
